[gd_scene load_steps=8 format=2]

[ext_resource path="res://Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameover/GameOverScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://target/Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://AbstractScene.gd" type="Script" id=5]
[ext_resource path="res://trigger/Trigger.tscn" type="PackedScene" id=6]
[ext_resource path="res://checkpoint_handler/CheckpointHandler.tscn" type="PackedScene" id=7]

[node name="AbstractScene" type="Node2D"]
script = ExtResource( 5 )

[node name="GameOverScreen" parent="." instance=ExtResource( 2 )]

[node name="Camera" parent="." instance=ExtResource( 1 )]
current = true

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 58.3746, 35.6733 )

[node name="Target" parent="." instance=ExtResource( 3 )]
position = Vector2( 12.5088, 50.4986 )

[node name="CheckpointHandler" parent="." instance=ExtResource( 7 )]

[node name="EndOfLevel" parent="." instance=ExtResource( 6 )]
[connection signal="retry" from="GameOverScreen" to="." method="_on_GameOverScreen_retry"]
[connection signal="gameover" from="Target" to="." method="_on_Target_gameover"]
[connection signal="checkpointed_reached" from="CheckpointHandler" to="." method="_on_CheckpointHandler_checkpointed_reached"]
[connection signal="body_entered" from="EndOfLevel" to="." method="_on_EndOfLevel_body_entered"]
